// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`folder exists 1`] = `
Object {
  "body": Object {
    "updated": "54",
  },
}
`;

exports[`folder exists, different parents 1`] = `
Object {
  "body": Object {
    "updated": "55",
  },
}
`;

exports[`happy path 1`] = `
Array [
  Array [
    "/folders/create",
    Object {
      "name": "FAKE_NAME",
      "parent_fid": undefined,
    },
  ],
]
`;

exports[`happy path 2`] = `
Object {
  "body": Object {
    "updated": "42",
  },
}
`;
